--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>I was forked/cloned from Github</h1>
-    <p>TODO: change this text!</p>
+    <p> but to land of the repo of a great coder like gkosmo, who's great at everything but humility</p>
+    <p>is the best at humility</p>
   </body>
 </html>
